force-app/main/default/objects/CategorySetting__mdt/CategorySetting__mdt.object-meta.xml
<CustomObject>
    <label>Category Setting</label>
    <pluralLabel>Category Settings</pluralLabel>
</CustomObject>