force-app/main/default/objects/CategorySetting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if a category is active and shows in the app</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>