force-app/main/default/objects/CategorySetting__mdt/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <label>Api Name</label>
    <type>TextArea</type>
</CustomField>