force-app/main/default/objects/CategorySetting__mdt/fields/Fetcher__c.field-meta.xml
<CustomField>
    <fullName>Fetcher__c</fullName>
    <label>Fetcher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL</fullName>
                <default>true</default>
                <label>SOQL</label>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
            <value>
                <fullName>Tooling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>