force-app/main/default/objects/CategorySetting__mdt/fields/FieldFilter__c.field-meta.xml
<CustomField>
    <fullName>FieldFilter__c</fullName>
    <label>Field Filter</label>
    <type>TextArea</type>
</CustomField>