force-app/main/default/objects/CategorySetting__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>