force-app/main/default/objects/CategorySetting__mdt/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <label>Reference Id</label>
    <type>TextArea</type>
</CustomField>