force-app/main/default/objects/CategorySetting__mdt/listViews/All_Categories.listView-meta.xml
<ListView>
    <fullName>All_Categories</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ApiName__c</columns>
    <columns>Fetcher__c</columns>
    <columns>Active__c</columns>
    <columns>FieldFilter__c</columns>
    <columns>Fields__c</columns>
    <columns>FilterObject__c</columns>
    <columns>Order__c</columns>
    <columns>ReferenceId__c</columns>
    <columns>RepeatApi__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Categories</label>
</ListView>